--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,6 @@ moblile/Temp
 moblile/UserSettings
 
 moblile/Assets/3rdParties
+moblile/Assets/Plugins
+moblile/Assets/Resources
+moblile/Assets/Fonts
